welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:31: error: not found: value prendreBiscuit
	prendreBiscuit();
        ^