welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
   	while(estSurBiscuit==false){
   	if (estFaceMur==false){
    	avance();
    	if(getCouleurSol()==Color.green){
    		recule();
    		baisseBrosse();
    		leveBrosse();
    		avance();
    		
    	}else{
    		recule();
    		gauche();
    		
    	}
    	
    }
    if (estFaceMur){
    	gauche();
    	baisseBrosse();
     leveBrosse();
    	avance();
    }

   	}
   


while(estSurBiscuit){
	prendreBiscuit();
	baisseBrosse();
	
}
}



def isFacingTrail():Boolean = {
 if(estFaceMur){
 	return false;
 }
    	avance();
    	if(getCouleurSol()==Color.green){
    		
    		recule();
    	
    		
    		
    		return true;
         	
    		}else{
    		recule();	
    		return false;
    			
    		}
    	}
    		
    		
    
